<resources>
    <string name="title_map">Map</string>
    <string name="title_prizes">Prizes</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_help">Help</string>
    <string name="title_sponsors">Sponsors</string>
    <string name="title_profile">Profile</string>
    <string name="title_sign_in">Sign In</string>
    <string name="sponsors">Sponsors</string>
    <string name="platinum_sponsors">Platinum Sponsors</string>
    <string name="gold_sponsors">Gold Sponsors</string>
    <string name="silver_sponsors">Silver Sponsors</string>
    <string name="bronze_sponsors">Bronze Sponsors</string>
    <string name="events">Events</string>
    <string name="floor_1">Floor 1</string>
    <string name="floor_2">Floor 2</string>
    <string name="floor_3">Floor 3</string>
    <string name="floor_4">Floor 4</string>
    <string name="tiger_hacks_logo">Tiger Hacks Logo</string>
    <string name="sponsor_1">Sponsor 1</string>
    <string name="sponsor_2">Sponsor 2</string>
    <string name="back">back</string>
    <string name="sponsor_logo">sponsor logo</string>
    <string name="mentors">Mentors</string>
    <string name="na">N/A</string>
    <string name="none_available">None Available</string>
    <string name="tiger_hacks_website">TigerHacks Website</string>
    <string name="mca_slack">Tigerhacks 2019 Slack</string>
    <string name="devpost">Devpost</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="intro_to_flask">Intro to Flask</string>
    <string name="intro_to_web">Intro to Web Dev</string>
    <string name="intro_to_ios">Intro to iOS Dev</string>
    <string name="tiger_talks">Tiger Talks</string>
    <string name="social_links">Social Links</string>
    <string name="description">Description</string>
    <string name="information">Information</string>
    <string name="prizes">Prizes</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="developer">Developer</string>
    <string name="Misc">Misc.</string>
    <string name="beginner">Beginner</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Sign in with Email</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
    <string name="message">Message</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="github_sign_in">Sign in with Github</string>
    <string name="light_theme">Day Theme</string>
    <string name="dark_theme">Night Theme</string>
    <string name="follow_battery_saver">Toggle Battery Saver</string>
    <string name="follow_system">Follow System Theme</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="all_mentors">All Mentors</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="full_name">Full Name</string>
    <string name="school">School</string>
    <string name="major">Major</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="shirt_size">Shirt Size</string>
    <string name="dietary_restrictions">Dietary Restrictions</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="kosher">Kosher</string>
    <string name="halal">Halal</string>
    <string name="vegan">Vegan</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="allergy">Allergy (please specify in notes)</string>
    <string name="other">Other (please specify in notes)</string>
    <string name="notes">Notes</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="travel_reimbursement">Will you need travel reimbursement?</string>
    <string name="mlh_user_agreement">I have read and agree to the MLH Code of Conduct, the MLH Contest Terms and Conditions , and the MLH Privacy Policy</string>
    <string name="mlh_share_agreement">I authorize you to share my application/registration information for event administration, ranking, MLH administration, pre- and post-event informational e-mails, and occasional messages about hackathons in-line with the MLH Privacy Policy.</string>
    <string name="firebase_web_host" translatable="false">177120544304-612rr8ls584b08jef73jdl0aag63vhkm.apps.googleusercontent.com</string>
</resources>
