<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_prizes"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_prizes" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_sponsors"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_sponsors" />

    <item
        android:id="@+id/navigation_tigertalks"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_tigertalks" />



</menu>
