<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite_filter"
        android:icon="@drawable/favorite_icon_selector"
        android:title="Favorite Filter"
        app:showAsAction="always"
        android:orderInCategory="0"
        android:checkable="true"
        />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/options_day"
            android:title="@string/light_theme" />

        <item
            android:id="@+id/options_night"
            android:title="@string/dark_theme" />

        <item
            android:id="@+id/options_system"
            android:title="@string/follow_system" />

        <item
            android:id="@+id/options_battery"
            android:title="@string/follow_battery_saver" />
    </group>
</menu>