<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="tigerhacks.android.tigerhacksapp.maps.MapFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"

        style="@style/AppTheme.Selector"
        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabFloor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/floor_1" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabFloor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/floor_2" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabFloor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/floor_3" />

    </com.google.android.material.tabs.TabLayout>

    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
