<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tigerTalksTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_marginTop="@dimen/margin_top_large"
            android:layout_marginStart="@dimen/margin_start_large"

            android:text="@string/tiger_talks"
            android:textAppearance="@style/AppTheme.TitlePrimary"
            />
        <tigerhacks.android.tigerhacksapp.help.HelpItemView
            android:id="@+id/introDataSci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/tigerTalksTextView"
            app:layout_constraintBottom_toTopOf="@id/introPython"

            android:layout_marginTop="@dimen/margin_top"
            android:paddingTop="@dimen/margin_top"
            android:paddingBottom="@dimen/margin_top"
            android:paddingStart="@dimen/margin_start_large"
            android:paddingEnd="@dimen/margin_start_large"

            app:titleRes="@string/intro_to_data_sci"
            app:titleIcon="@drawable/youtube_icon"
            />

        <tigerhacks.android.tigerhacksapp.help.HelpItemView
            android:id="@+id/introPython"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/introDataSci"
            app:layout_constraintBottom_toTopOf="@id/introGithub"

            android:paddingTop="@dimen/margin_top"
            android:paddingBottom="@dimen/margin_top"
            android:paddingStart="@dimen/margin_start_large"
            android:paddingEnd="@dimen/margin_start_large"

            app:titleRes="@string/intro_to_python"
            app:titleIcon="@drawable/youtube_icon"
            />

        <tigerhacks.android.tigerhacksapp.help.HelpItemView
            android:id="@+id/introGithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/introPython"
            app:layout_constraintBottom_toTopOf="@id/introiOSCardView"

            android:paddingTop="@dimen/margin_top"
            android:paddingBottom="@dimen/margin_top"
            android:paddingStart="@dimen/margin_start_large"
            android:paddingEnd="@dimen/margin_start_large"

            app:titleRes="@string/intro_to_github"
            app:titleIcon="@drawable/youtube_icon"
            />

        <tigerhacks.android.tigerhacksapp.help.HelpItemView
            android:id="@+id/introiOSCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/introGithub"
            app:layout_constraintBottom_toTopOf="@id/introWebDevCardView"

            android:paddingTop="@dimen/margin_top"
            android:paddingBottom="@dimen/margin_top"
            android:paddingStart="@dimen/margin_start_large"
            android:paddingEnd="@dimen/margin_start_large"

            app:titleRes="@string/intro_to_ios"
            app:titleIcon="@drawable/youtube_icon"
            />

        <tigerhacks.android.tigerhacksapp.help.HelpItemView
            android:id="@+id/introWebDevCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/introiOSCardView"
            android:paddingTop="@dimen/margin_top"
            android:paddingBottom="@dimen/margin_top"
            android:paddingStart="@dimen/margin_start_large"
            android:paddingEnd="@dimen/margin_start_large"

            app:titleRes="@string/intro_to_web"
            app:titleIcon="@drawable/youtube_icon"
            />

        <tigerhacks.android.tigerhacksapp.help.HelpItemView
            android:id="@+id/introFlaskCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/introWebDevCardView"
            android:paddingTop="@dimen/margin_top"
            android:paddingBottom="@dimen/margin_top"
            android:paddingStart="@dimen/margin_start_large"
            android:paddingEnd="@dimen/margin_start_large"

            app:titleRes="@string/intro_to_flask"
            app:titleIcon="@drawable/youtube_icon"
            />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size"

            app:layout_constraintTop_toBottomOf="@id/introFlaskCardView"
            android:layout_marginTop="@dimen/margin_top_large"
            android:background="@color/divider"
            />

        <TextView
            android:id="@+id/otherLinksTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2"

            android:layout_marginTop="@dimen/margin_top_large"
            android:layout_marginStart="@dimen/margin_start_large"

            android:text="@string/social_links"
            android:textAppearance="@style/AppTheme.TitleSecondary"
            />

        <tigerhacks.android.tigerhacksapp.help.HelpItemView
            android:id="@+id/tigerHacksWebsiteCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/otherLinksTextView"

            android:layout_marginTop="@dimen/margin_top"

            android:paddingTop="@dimen/margin_top"
            android:paddingBottom="@dimen/margin_top"
            android:paddingStart="@dimen/margin_start_large"
            android:paddingEnd="@dimen/margin_start_large"

            app:titleIcon="@drawable/tiger_icon"
            app:titleRes="@string/tiger_hacks_website"
            />

        <tigerhacks.android.tigerhacksapp.help.HelpItemView
            android:id="@+id/mcaSlackCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/tigerHacksWebsiteCardView"
            android:paddingTop="@dimen/margin_top"
            android:paddingBottom="@dimen/margin_top"
            android:paddingStart="@dimen/margin_start_large"
            android:paddingEnd="@dimen/margin_start_large"

            app:titleIcon="@drawable/slack_icon"
            app:titleRes="@string/mca_slack"
            />

        <tigerhacks.android.tigerhacksapp.help.HelpItemView
            android:id="@+id/devPostCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/mcaSlackCardView"
            android:paddingTop="@dimen/margin_top"
            android:paddingBottom="@dimen/margin_top"
            android:paddingStart="@dimen/margin_start_large"
            android:paddingEnd="@dimen/margin_start_large"

            app:titleRes="@string/devpost"
            app:titleIcon="@drawable/devpost_icon"
            />

        <tigerhacks.android.tigerhacksapp.help.HelpItemView
            android:id="@+id/twitterCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/devPostCardView"
            android:paddingTop="@dimen/margin_top"
            android:paddingBottom="@dimen/margin_top"
            android:paddingStart="@dimen/margin_start_large"
            android:paddingEnd="@dimen/margin_start_large"

            app:titleRes="@string/twitter"
            app:titleIcon="@drawable/twitter_icon"
            />

        <tigerhacks.android.tigerhacksapp.help.HelpItemView
            android:id="@+id/instagramCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/twitterCardView"
            android:paddingTop="@dimen/margin_top"
            android:paddingBottom="@dimen/margin_top"
            android:paddingStart="@dimen/margin_start_large"
            android:paddingEnd="@dimen/margin_start_large"

            app:titleRes="@string/instagram"
            />

        <tigerhacks.android.tigerhacksapp.help.HelpItemView
            android:id="@+id/facebookCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/instagramCardView"
            android:paddingTop="@dimen/margin_top"
            android:paddingBottom="@dimen/margin_top"
            android:paddingStart="@dimen/margin_start_large"
            android:paddingEnd="@dimen/margin_start_large"

            app:titleRes="@string/facebook"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

