<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tigerTalksTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="@dimen/tigertalks_padding_top_bottom"
        android:paddingBottom="@dimen/tigertalks_padding_top_bottom"
        android:paddingStart="@dimen/tigertalks_padding_start_end"
        android:paddingEnd="@dimen/tigertalks_padding_start_end"

        android:textColor="@color/sponsorTextPrimary"
        android:text="@string/tiger_talks"
        android:textSize="@dimen/tigertalks_text_size"
        android:textStyle="bold"
        android:textAllCaps="true"
        />

    <tigerhacks.android.tigerhacksapp.resources.ResourceCardView
        android:id="@+id/introiOSCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tigerTalksTextView"
        app:layout_constraintBottom_toTopOf="@id/introWebDevCardView"
        android:paddingTop="@dimen/tigertalks_padding_top_bottom"
        android:paddingBottom="@dimen/tigertalks_padding_top_bottom"
        android:paddingStart="@dimen/tigertalks_padding_start_end"
        android:paddingEnd="@dimen/tigertalks_padding_start_end"

        app:titleRes="@string/intro_to_ios"
        app:titleIcon="@drawable/ic_round_play_circle_24px"
        />

    <tigerhacks.android.tigerhacksapp.resources.ResourceCardView
        android:id="@+id/introWebDevCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/introiOSCardView"
        android:paddingTop="@dimen/tigertalks_padding_top_bottom"
        android:paddingBottom="@dimen/tigertalks_padding_top_bottom"
        android:paddingStart="@dimen/tigertalks_padding_start_end"
        android:paddingEnd="@dimen/tigertalks_padding_start_end"

        app:titleRes="@string/intro_to_web"
        app:titleIcon="@drawable/ic_round_play_circle_24px"
        />

    <tigerhacks.android.tigerhacksapp.resources.ResourceCardView
        android:id="@+id/introFlaskCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/introWebDevCardView"
        android:paddingTop="@dimen/tigertalks_padding_top_bottom"
        android:paddingBottom="@dimen/tigertalks_padding_top_bottom"
        android:paddingStart="@dimen/tigertalks_padding_start_end"
        android:paddingEnd="@dimen/tigertalks_padding_start_end"

        app:titleRes="@string/intro_to_flask"
        app:titleIcon="@drawable/ic_round_play_circle_24px"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"

        app:layout_constraintTop_toBottomOf="@id/introFlaskCardView"
        android:layout_marginTop="8dp"
        android:background="@color/divider"
        />

    <TextView
        android:id="@+id/otherLinksTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"

        android:paddingTop="@dimen/tigertalks_padding_top_bottom"
        android:paddingBottom="@dimen/tigertalks_padding_top_bottom"
        android:paddingStart="@dimen/tigertalks_padding_start_end"
        android:paddingEnd="@dimen/tigertalks_padding_start_end"

        android:text="@string/other_links"
        android:textColor="@color/sponsorTextPrimary"
        android:textAllCaps="true"
        android:textSize="@dimen/tigertalks_text_size"
        android:textStyle="bold"
        />

    <tigerhacks.android.tigerhacksapp.resources.ResourceCardView
        android:id="@+id/tigerHacksWebsiteCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/otherLinksTextView"

        android:paddingTop="@dimen/tigertalks_padding_top_bottom"
        android:paddingBottom="@dimen/tigertalks_padding_top_bottom"
        android:paddingStart="@dimen/tigertalks_padding_start_end"
        android:paddingEnd="@dimen/tigertalks_padding_start_end"

        app:titleIcon="@mipmap/ic_launcher_round"
        app:titleRes="@string/tiger_hacks_website"
        />

    <tigerhacks.android.tigerhacksapp.resources.ResourceCardView
        android:id="@+id/mcaSlackCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/tigerHacksWebsiteCardView"
        android:paddingTop="@dimen/tigertalks_padding_top_bottom"
        android:paddingBottom="@dimen/tigertalks_padding_top_bottom"
        android:paddingStart="@dimen/tigertalks_padding_start_end"
        android:paddingEnd="@dimen/tigertalks_padding_start_end"

        app:titleIcon="@drawable/ic_icon_slack_hash_colored"
        app:titleRes="@string/mca_slack"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

