<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginStart="@dimen/margin_start_large"
        android:layout_marginEnd="@dimen/margin_start_large"

        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintStart_toStartOf="@id/usernameEditText"
        app:layout_constraintEnd_toEndOf="@id/usernameEditText"

        android:inputType="textPassword"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/registerButton"

        android:text="@string/log_in"
        />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="@id/loginButton"
        app:layout_constraintStart_toEndOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="@string/register"
        />

    <!-- Google Button -->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/loginGoogleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:buttonSize="wide"

        android:visibility="visible"
        tools:visibility="visible"
        />
    <!-- Github Button -->
</androidx.constraintlayout.widget.ConstraintLayout>